tests/expectations/compiler/core/algorithms/integers/pedersen128/pedersen128_hash_to_i32.out
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:26:22
     |
  26 |         let a: i32 = Pedersen128::hash_to_i32(bool_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:27:22
     |
  27 |         let b: i32 = Pedersen128::hash_to_i32(bool_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:28:22
     |
  28 |         let c: i32 = Pedersen128::hash_to_i32(bool_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:29:22
     |
  29 |         let d: i32 = Pedersen128::hash_to_i32(bool_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:30:22
     |
  30 |         let e: i32 = Pedersen128::hash_to_i32(i8_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:31:22
     |
  31 |         let f: i32 = Pedersen128::hash_to_i32(i16_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:32:22
     |
  32 |         let g: i32 = Pedersen128::hash_to_i32(i32_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:33:22
     |
  33 |         let h: i32 = Pedersen128::hash_to_i32(i64_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:34:22
     |
  34 |         let j: i32 = Pedersen128::hash_to_i32(u8_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:35:22
     |
  35 |         let k: i32 = Pedersen128::hash_to_i32(u16_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:36:22
     |
  36 |         let l: i32 = Pedersen128::hash_to_i32(u32_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:37:22
     |
  37 |         let m: i32 = Pedersen128::hash_to_i32(u64_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:38:22
     |
  38 |         let o: i32 = Pedersen128::hash_to_i32(bool_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:40:22
     |
  40 |         let q: i32 = Pedersen128::hash_to_i32(bool_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
